--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sample",
   "version": "0.0.1",
   "dependencies": {
-    "express": "3.x",
+    "express": "3.x"
   },
   "engines": {
     "node": "0.10.x",
